Fixed some bugs on smaller screens

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -12,6 +12,7 @@ header {
     svg {
       margin-bottom: 2em;
       width: em(155);
+      height: em(148);
 
       path {
         fill: $refresh-blue;
